tests/compile-fail/function_calls/exported_symbol_shim_clashing.stderr
error: found `malloc` symbol definition that clashes with a built-in shim
  --> $DIR/exported_symbol_shim_clashing.rs:12:9
   |
LL |         malloc(0);
   |         ^^^^^^^^^ found `malloc` symbol definition that clashes with a built-in shim
   |
help: the `malloc` symbol is defined here
  --> $DIR/exported_symbol_shim_clashing.rs:2:1
   |
LL | / extern "C" fn malloc(_: usize) -> *mut std::ffi::c_void {
LL | |     //~^ HELP the `malloc` symbol is defined here
LL | |     unreachable!()
LL | | }
   | |_^
   = note: inside `main` at $DIR/exported_symbol_shim_clashing.rs:12:9

note: some details are omitted, run with `MIRIFLAGS=-Zmiri-backtrace=full` for a verbose backtrace

error: aborting due to previous error

